# Cytovanni

./: .gitignore  README.md  llms.txt  pyproject.toml  run_test_container.sh
.github/workflows/: ci.yaml  publish.yaml
container/: Rcontainer.def  container.def  container.md  test.def
docs/: conf.py  index.md
docs/tutorials/: container.md  cytometer_config.ipynb
docs/tutorials/configuration/: cytometer_config.ipynb  index.md
docs/tutorials/integration_fixed-spectra/: index.md  integration_fixed-spectra-ref.ipynb
docs/tutorials/integration_variable-spectra/: index.md  integration_variable-spectra-dye.ipynb  integration_variable-spectra-model.ipynb
src/cytovanni/: __init__.py  exceptions.py  version.py
src/cytovanni/gating/: __init__.py  autospill.py  bead.py  line.py  minmax.py  polygon.py  unmx.py  utils.py
src/cytovanni/io/: S8.py  __init__.py  bead.py  rainbow.py  utils.py
src/cytovanni/rainbow/: __init__.py  gmm.py  plot.py  pmt.py  rbim.py  rbim_data.py  rbim_fluorescence.py  rbim_scatter.py  rboe.py  setvolt.py  utils.py
src/cytovanni/ref/: __init__.py  data.py  factor.py  model.py  model_transformer.py  model_transformer_smp.py  model_weight.py  moe.py  panel.py  plot.py
src/cytovanni/spill/: __init__.py  autospill.py  collection.py  panel.py  pca.py  stainfit.py  utils.py
src/cytovanni/spill/AutoSpill/: install_AutoSpill.R  (+1 more)
src/cytovanni/torch/: __init__.py  dist.py  geomloss.py  loss.py  mmd.py  parameter.py  pdsave.py  unmx.py  utils.py
src/cytovanni/utils/: __init__.py  config.py  evl.py  misc.py  nxn.py  oe.py  rate.py  unmx.py
